--- a/index.html
+++ b/index.html
@@ -7,6 +7,176 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <div class="header">
+        <div class="header-top">
+            <div class="search-bar">
+                <img src="./icons/search.svg" alt="">
+                <input type="search" name="search" id="search">
+            </div>
+            <div class="profile">
+                <img src="./icons/notifications.svg" alt="">
+                <div class="profile-photo"></div>
+                <span>Morgan Oakley</span>
+            </div>
+        </div>
+        <div class="header-bottom">
+            <div class="welcome">
+                <div class="profile-photo"></div>
+                <span>Hi there,</span>
+                <span>Morgan Oakley (@morgan)</span>
+            </div>
+            <div class="actions">
+                <button type="button">New</button>
+                <button type="button">Upload</button>
+                <button type="button">Share</button>
+            </div>
+        </div>
+    </div>
+    <div class="sidebar">
+        <div class="logo">
+            <img src="./icons/dashboard.svg" alt="">
+            <h1>Dashboard</h1>
+        </div>
+        <div class="sidebar-main">
+            <div>
+                <img src="./icons/home.svg" alt="">
+                <span>Home</span>
+            </div>
+            <div>
+                <img src="./icons/profile.svg" alt="">
+                <span>Profile</span>
+            </div>
+            <div>
+                <img src="./icons/messages.svg" alt="">
+                <span>Messages</span>
+            </div>
+            <div>
+                <img src="./icons/history.svg" alt="">
+                <span>History</span>
+            </div>
+            <div>
+                <img src="./icons/tasks.svg" alt="">
+                <span>Tasks</span>
+            </div>
+            <div>
+                <img src="./icons/communities.svg" alt="">
+                <span>Communities</span>
+            </div>
+        </div>
+        <div class="sidebar-secondary">
+            <div>
+                <img src="./icons/settings.svg" alt="">
+                <span>Settings</span>
+            </div>
+            <div>
+                <img src="./icons/support.svg" alt="">
+                <span>Support</span>
+            </div>
+            <div>
+                <img src="./icons/privacy.svg" alt="">
+                <span>Privacy</span>
+            </div>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="projects">
+            <h2>Your Projects</h2>
+            <div class="projects-container">
+                <div class="project">
+                    <h3>Super Cool Project</h3>
+                    <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+                <div class="project">
+                    <h3>Less Cool Project</h3>
+                    <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+                <div class="project">
+                    <h3>Impossible App</h3>
+                    <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+                <div class="project">
+                    <h3>Easy Peasy App</h3>
+                    <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+                <div class="project">
+                    <h3>Ad Blocker</h3>
+                    <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+                <div class="project">
+                    <h3>Money Maker</h3>
+                    <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
+                    <div class="icons">
+                        <img src="./icons/star.svg" alt="">
+                        <img src="./icons/eye.svg" alt="">
+                        <img src="./icons/fork.svg" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="announcements">
+            <h2>Announcements</h2>
+            <div class="announcements-container">
+                <h3>Site Maintenance</h3>
+                <p>Vestibulum condimentum tellus lacus, in accumsan elit maximus ac. Donec hendrerit sondales congue...
+                </p>
+                <hr>
+                <h3>Community Share Day</h3>
+                <p>Nam vel lectus tincidunt, rutrum nulla eu, ornare libero. Aliquam dictum accumsam porttitor...</p>
+                <hr>
+                <h3>Updated Privacy Policy</h3>
+                <p>Phasellus efficitur nisi eget elit consectetur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+            </div>
+        </div>
+        <div class="trending">
+            <h2>Trending</h2>
+            <div class="trending-container">
+                <div>
+                    <div class="profile-photo"></div>
+                    <span>@tegan</span>
+                    <span>World Peace Builder</span>
+                </div>
+                <div>
+                    <div class="profile-photo"></div>
+                    <span>@morgan</span>
+                    <span>Super Cool Project</span>
+                </div>
+                <div>
+                    <div class="profile-photo"></div>
+                    <span>@kendall</span>
+                    <span>Life Changing App</span>
+                </div>
+                <div>
+                    <div class="profile-photo"></div>
+                    <span>@alex</span>
+                    <span>No Traffic Maker</span>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
