Add styles to sidebar

--- a/index.html
+++ b/index.html
@@ -34,46 +34,46 @@
     </div>
     <div class="sidebar">
         <div class="logo">
-            <img src="./icons/dashboard.svg" alt="">
+            <img src="./icons/dashboard.svg" alt="" width="30" height="30">
             <h1>Dashboard</h1>
         </div>
         <div class="sidebar-main">
             <div>
-                <img src="./icons/home.svg" alt="">
+                <img src="./icons/home.svg" alt="" width="35" height="35">
                 <span>Home</span>
             </div>
             <div>
-                <img src="./icons/profile.svg" alt="">
+                <img src="./icons/profile.svg" alt="" width="35" height="35">
                 <span>Profile</span>
             </div>
             <div>
-                <img src="./icons/messages.svg" alt="">
+                <img src="./icons/messages.svg" alt="" width="35" height="35">
                 <span>Messages</span>
             </div>
             <div>
-                <img src="./icons/history.svg" alt="">
+                <img src="./icons/history.svg" alt="" width="35" height="35">
                 <span>History</span>
             </div>
             <div>
-                <img src="./icons/tasks.svg" alt="">
+                <img src="./icons/tasks.svg" alt="" width="35" height="35">
                 <span>Tasks</span>
             </div>
             <div>
-                <img src="./icons/communities.svg" alt="">
+                <img src="./icons/communities.svg" alt="" width="35" height="35">
                 <span>Communities</span>
             </div>
         </div>
         <div class="sidebar-secondary">
             <div>
-                <img src="./icons/settings.svg" alt="">
+                <img src="./icons/settings.svg" alt="" width="35" height="35">
                 <span>Settings</span>
             </div>
             <div>
-                <img src="./icons/support.svg" alt="">
+                <img src="./icons/support.svg" alt="" width="35" height="35">
                 <span>Support</span>
             </div>
             <div>
-                <img src="./icons/privacy.svg" alt="">
+                <img src="./icons/privacy.svg" alt="" width="35" height="35">
                 <span>Privacy</span>
             </div>
         </div>
