Add styles to header

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <div class="header">
         <div class="header-top">
             <div class="search-bar">
-                <img src="./icons/search.svg" alt="">
+                <img src="./icons/search.svg" alt="" width="20" height="20">
                 <input type="search" name="search" id="search">
             </div>
             <div class="profile">
-                <img src="./icons/notifications.svg" alt="">
+                <img src="./icons/notifications.svg" alt="" width="20" height="20">
                 <div class="profile-photo"></div>
                 <span>Morgan Oakley</span>
             </div>
@@ -22,8 +22,10 @@
         <div class="header-bottom">
             <div class="welcome">
                 <div class="profile-photo"></div>
-                <span>Hi there,</span>
-                <span>Morgan Oakley (@morgan)</span>
+                <div class="welcome-message">
+                    <span>Hi there,</span>
+                    <span>Morgan Oakley (@morgan)</span>
+                </div>
             </div>
             <div class="actions">
                 <button type="button">New</button>
