--- a/index.html
+++ b/index.html
@@ -88,54 +88,54 @@
                     <h3>Super Cool Project</h3>
                     <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
                 <div class="project">
                     <h3>Less Cool Project</h3>
                     <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tincidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
                 <div class="project">
                     <h3>Impossible App</h3>
                     <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
                 <div class="project">
                     <h3>Easy Peasy App</h3>
                     <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
                 <div class="project">
                     <h3>Ad Blocker</h3>
                     <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
                 <div class="project">
                     <h3>Money Maker</h3>
                     <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex. Pellentesque mollis nec sem vel aliquam.</p>
                     <div class="icons">
-                        <img src="./icons/star.svg" alt="">
-                        <img src="./icons/eye.svg" alt="">
-                        <img src="./icons/fork.svg" alt="">
+                        <img src="./icons/star.svg" alt="" width="20" height="20">
+                        <img src="./icons/eye.svg" alt="" width="20" height="20">
+                        <img src="./icons/fork.svg" alt="" width="20" height="20">
                     </div>
                 </div>
             </div>
