Add styles to announcements and trending

--- a/index.html
+++ b/index.html
@@ -159,23 +159,31 @@
             <div class="trending-container">
                 <div>
                     <div class="profile-photo"></div>
-                    <span>@tegan</span>
-                    <span>World Peace Builder</span>
+                    <div class="profile-info">
+                        <span>@tegan</span>
+                        <span>World Peace Builder</span>
+                    </div>
                 </div>
                 <div>
                     <div class="profile-photo"></div>
-                    <span>@morgan</span>
-                    <span>Super Cool Project</span>
+                    <div class="profile-info">
+                         <span>@morgan</span>
+                        <span>Super Cool Project</span>
+                    </div>
                 </div>
                 <div>
                     <div class="profile-photo"></div>
-                    <span>@kendall</span>
-                    <span>Life Changing App</span>
+                    <div class="profile-info">
+                        <span>@kendall</span>
+                        <span>Life Changing App</span>
+                    </div>
                 </div>
                 <div>
                     <div class="profile-photo"></div>
-                    <span>@alex</span>
-                    <span>No Traffic Maker</span>
+                    <div class="profile-info">
+                        <span>@alex</span>
+                        <span>No Traffic Maker</span>
+                    </div>
                 </div>
             </div>
         </div>
