Improve CSS readability

--- a/index.html
+++ b/index.html
@@ -40,41 +40,41 @@
             <h1>Dashboard</h1>
         </div>
         <div class="sidebar-main">
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/home.svg" alt="" width="40" height="40">
                 <span>Home</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/profile.svg" alt="" width="40" height="40">
                 <span>Profile</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/messages.svg" alt="" width="40" height="40">
                 <span>Messages</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/history.svg" alt="" width="40" height="40">
                 <span>History</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/tasks.svg" alt="" width="40" height="40">
                 <span>Tasks</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/communities.svg" alt="" width="40" height="40">
                 <span>Communities</span>
             </div>
         </div>
         <div class="sidebar-secondary">
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/settings.svg" alt="" width="40" height="40">
                 <span>Settings</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/support.svg" alt="" width="40" height="40">
                 <span>Support</span>
             </div>
-            <div>
+            <div class="sidebar-item">
                 <img src="./icons/privacy.svg" alt="" width="40" height="40">
                 <span>Privacy</span>
             </div>
@@ -157,28 +157,28 @@
         <div class="trending">
             <h2>Trending</h2>
             <div class="trending-container">
-                <div>
+                <div class="trending-item">
                     <div class="profile-photo"></div>
                     <div class="profile-info">
                         <span>@tegan</span>
                         <span>World Peace Builder</span>
                     </div>
                 </div>
-                <div>
+                <div class="trending-item">
                     <div class="profile-photo"></div>
                     <div class="profile-info">
                          <span>@morgan</span>
                         <span>Super Cool Project</span>
                     </div>
                 </div>
-                <div>
+                <div class="trending-item">
                     <div class="profile-photo"></div>
                     <div class="profile-info">
                         <span>@kendall</span>
                         <span>Life Changing App</span>
                     </div>
                 </div>
-                <div>
+                <div class="trending-item">
                     <div class="profile-photo"></div>
                     <div class="profile-info">
                         <span>@alex</span>
